--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./assets/javascript/index.js"></script>
     <link rel="stylesheet" href="./assets/stylesheets/index.css">
 </head>
 
 <body>
-
-</body>
+    <div id="mydiv"></div>
     <button onclick="openPlayStore()" >Play Store</button>
     <button onclick="openAppStore()" >App Store</button>
+</body>
+<script src="./assets/javascript/index.js"></script>
+
 </html>
